# a66

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
public/: manifest.webmanifest
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  image_inpaint.rs  lib.rs  main.rs  models.rs  ocr.rs  tokenizer.rs  translator.rs  utils.rs
src/api/: tauri.ts
src/components/: AppLayout.vue  ImageCanvas.vue  ImageUploader.vue
src/router/: index.ts
src/store/: app.ts
src/styles/: main.css
src/types/: index.ts
src/views/: HistoryView.vue  HomeView.vue  SearchView.vue
