[package]
name = "ocr-translate-app"
version = "0.1.0"
description = "OCR Translate Desktop App with Tauri"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "ocr_translate_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["dialog-all", "fs-all", "path-all", "shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled", "full"] }
anyhow = "1.0"
thiserror = "1.0"
image = { version = "0.24", features = ["jpeg", "png"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.35", features = ["full"] }
parking_lot = "0.12"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"

[dependencies.leptess]
version = "0.14"
optional = true

[features]
default = []
tesseract = ["leptess"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
